5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1771_1580.log
== TEST (2019-05-30 10:34:28) 
-- CODE:
baixaria=array(float(eval(input("notas: "))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    baixaria=array(float(eval(input())))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:58) 
-- CODE:
from numpy import *
baixaria=array(float(eval(input("notas: "))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:35:24) 
-- CODE:
from numpy import *
baixaria=array(float(eval(input("notas: "))))
print(baixaria)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:36:16) 
-- CODE:
from numpy import *
baixaria=array(eval(float(input("notas: "))))
print(baixaria)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:43:42) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
while (baixaria[p]==meliantes[p]):
	if (baixaria[p]==-1):
		falta=falta+1
	print(falta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:44:13) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
while (baixaria[p]==meliantes[p]):
	if (baixaria[p]==-1):
		falta=falta+1
print(falta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:56) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
print(falta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:48:00) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
	p=p+1
print(falta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:56:29) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
ap=0
rep=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
	elif (baixaria[p]>6):
		ap=ap+1
	elif (baixaria[p]<6):
		rep=rep+1
	elif (baixaria[p]>-1):
		media=sum(baixaria)/size(alunos)
	p=p+1
print(falta)
print(ap)
print(rep)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:57:09) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
ap=0
rep=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
	elif (baixaria[p]>6):
		ap=ap+1
	elif (baixaria[p]<6):
		rep=rep+1
	elif (baixaria[p]>-1):
		media=sum(baixaria)/size(meliantes)
	p=p+1
print(falta)
print(ap)
print(rep)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:03:21) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
ap=0
rep=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
	elif (baixaria[p]>6):
		ap=ap+1
	elif (baixaria[p]<6 or baixaria[p]==-1):
		rep=rep+1
	elif (baixaria[p]>-1):
		media=sum(baixaria)/size(meliantes)
	elif (baixaria[p]==max(baixaria)):
		maior=meliantes[p]
	p=p+1
print(falta)
print(ap)
print(rep)
print(round(media,2))
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:06:10) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
ap=0
rep=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
	elif (baixaria[p]>6):
		ap=ap+1
	elif (baixaria[p]<6 or baixaria[p]==-1):
		rep=rep+1
	elif (baixaria[p]>-1):
		media=sum(baixaria)/size(meliantes)
	p=p+1
print(falta)
print(ap)
print(rep)
print(round(media,2))
print(maior)
if(baixaria[p]==max(baixaria)):
	print(meliantes[p])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:06:55) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
ap=0
rep=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
	elif (baixaria[p]>6):
		ap=ap+1
	elif (baixaria[p]<6 or baixaria[p]==-1):
		rep=rep+1
	elif (baixaria[p]>-1):
		media=sum(baixaria)/size(meliantes)
	p=p+1
print(falta)
print(ap)
print(rep)
print(round(media,2))
if(baixaria[p]==max(baixaria)):
	print(meliantes[p])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:41) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
ap=0
rep=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
	elif (baixaria[p]>6):
		ap=ap+1
	elif (baixaria[p]<6 or baixaria[p]==-1):
		rep=rep+1
	elif (baixaria[p]>-1):
		media=sum(baixaria)/size(meliantes)
	p=p+1
print(falta)
print(ap)
print(rep)
print(round(media,2))
if(baixaria[p]!=max(baixaria)):
	p=p+1
print(meliantes[p])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:10:39) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
ap=0
rep=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
	elif (baixaria[p]>6):
		ap=ap+1
	elif (baixaria[p]<6 or baixaria[p]==-1):
		rep=rep+1
	elif (baixaria[p]>-1):
		media=sum(baixaria)/size(meliantes)
	p=p+1
print(falta)
print(ap)
print(rep)
print(round(media,2))
if(baixaria[p]!=max(baixaria)):
	p=p+1
print(meliantes[p])
-- EXECUTION TIME:
0.367255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1580/main.py", line 22, in <module>
    if(baixaria[p]!=max(baixaria)):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:15:22) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
ap=0
rep=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
print(falta)
	elif (baixaria[p]>6):
		ap=ap+1
print(ap)
	elif (baixaria[p]<6 or baixaria[p]==-1):
		rep=rep+1
print(rep)
	elif (baixaria[p]>-1):
		media=sum(baixaria)/size(meliantes)
	p=p+1
print(round(media,2))
	elif (baixaria[p]!=max(baixaria)):
	p=p+1
print(meliantes[p])

-- EXECUTION TIME:
0.184776
-- ERROR:
  File "/home/codebench/codes/1771/1580/main.py", line 12
    elif (baixaria[p]>6):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:15:24) 
-- CODE:
from numpy import *
baixaria=array(eval(input("notas: ")))
meliantes=array(eval(input("alunos: ")))
p=0
falta=0
ap=0
rep=0
while (p<size(baixaria)):
	if (baixaria[p]==-1):
		falta=falta+1
print(falta)
	elif (baixaria[p]>6):
		ap=ap+1
print(ap)
	elif (baixaria[p]<6 or baixaria[p]==-1):
		rep=rep+1
print(rep)
	elif (baixaria[p]>-1):
		media=sum(baixaria)/size(meliantes)
	p=p+1
print(round(media,2))
	elif (baixaria[p]!=max(baixaria)):
	p=p+1
print(meliantes[p])

-- ERROR:
File "XXXX", line 12
    elif (baixaria[p]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
